--- a/src/CRM/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CRM/CoreBundle/Resources/views/layout.html.twig
@@ -8,6 +8,7 @@
         {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme-crm.css') }}" type="text/css" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
