--- a/src/CRM/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/CRM/UserBundle/Resources/views/Security/login.html.twig
@@ -9,31 +9,26 @@
 
 <form action="{{ path("fos_user_security_check") }}" method="post" class="form-horizontal" role="form">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-
-    <div class="form-group">
-        <label for="username" class="col-lg-5 control-label">{{ 'security.login.username'|trans }}</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
-    </div>
-    
-    <div class="form-group">
-        <label for="password" class="col-lg-5 control-label">{{ 'security.login.password'|trans }}</label>
-        <input type="password" id="password" name="_password" required="required" />
-    </div>
-        
-    <div class="form-group">
-        <div class="col-lg-offset-5">
-            <div class="checkbox">            
-                <label for="remember_me">
-                    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />{{ 'security.login.remember_me'|trans }}
-                </label>
+    <ul class="list-group">
+        <li class="list-group-item">
+            <div class="form-group">
+                <label for="username" class="col-lg-5 control-label">{{ 'security.login.username'|trans }}</label>
+                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
             </div>
-        </div>
-    </div>
-    
-    <div class="form-group">
-        <div class="col-lg-offset-5">
-            <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-primary" />
-        </div>
-    </div>
+        </li>
+        <li class="list-group-item">
+            <div class="form-group">
+                <label for="password" class="col-lg-5 control-label">{{ 'security.login.password'|trans }}</label>
+                <input type="password" id="password" name="_password" required="required" />
+            </div>
+        </li>    
+        <li class="list-group-item">
+            <div class="form-group">
+                <div class="col-lg-offset-5">
+                    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-primary" />
+                </div>
+            </div>
+        </li>
+    </ul>
 </form>
 {% endblock fos_user_content %}
