--- a/src/CRM/UserBundle/Resources/views/layout.html.twig
+++ b/src/CRM/UserBundle/Resources/views/layout.html.twig
@@ -2,6 +2,8 @@
 
 {% extends "CRMCoreBundle::layout.html.twig" %}
 
+{% block title %}{{ 'layout.login'|trans({}, 'FOSUserBundle') }} {{ parent() }}{% endblock %}
+
 {% block body %}
 
 {% for type, messages in app.session.flashBag.all %}
@@ -13,6 +15,12 @@
         {% endfor %}
 <div class="col-lg-offset-3 col-lg-6" style="margin-top: 30%;">    
     <div class="panel panel-default">
+        <header class="panel-heading">
+            <div class="panel-title login">
+                {{ title_crm }}
+            </div>
+        </header>
+            
         <div class="panel-body">
             {% block fos_user_content %}
             {% endblock fos_user_content %}
