Template login terminé + Commencé template accueil

--- a/src/CRM/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/CRM/CoreBundle/Resources/views/Core/index.html.twig
@@ -3,4 +3,5 @@
 {% block title %}Accueil {{ parent() }}{% endblock %}
 
 {% block body %}
+    <p>Bonjour {{ app.user.username }} - {{ app.user.email }}</p>
 {% endblock %}
