--- a/src/CRM/UserBundle/Resources/views/layout.html.twig
+++ b/src/CRM/UserBundle/Resources/views/layout.html.twig
@@ -1,30 +1,48 @@
 {# src/CRM/UserBundle/Resources/views/layout.html.twig #}
 
-{% extends "CRMCoreBundle::layout.html.twig" %}
+<html>
+    <head>
+        <meta name="author" content="Maréchal Pierre">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-language" content="fr-BE" />
+        <title>{{ 'layout.login'|trans({}, 'FOSUserBundle') }} - CRM</title>
+        {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme-crm-login.css') }}" type="text/css" />
+        {% endblock %}
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-offset-3 col-lg-6" style="margin-top: 30%;">    
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="panel-title login">
+                                {{ title_crm }}
+                            </div>
+                        </div>
 
-{% block title %}{{ 'layout.login'|trans({}, 'FOSUserBundle') }} {{ parent() }}{% endblock %}
-
-{% block body %}
-
-{% for type, messages in app.session.flashBag.all %}
-            {% for message in messages %}
-                <div class="{{ type }}">
-                    {{ message|trans({}, 'FOSUserBundle') }} azd
-                </div>
-            {% endfor %}
-        {% endfor %}
-<div class="col-lg-offset-3 col-lg-6" style="margin-top: 30%;">    
-    <div class="panel panel-default">
-        <header class="panel-heading">
-            <div class="panel-title login">
-                {{ title_crm }}
+                        <div class="panel-body">
+                            {% for type, messages in app.session.flashBag.all %}
+                                {% for message in messages %}
+                                    <div class="{{ type }}">
+                                        {{ message|trans({}, 'FOSUserBundle') }} azd
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}  
+                              
+                            {% block fos_user_content %}
+                            {% endblock fos_user_content %}
+                        </div>
+                    </div>
+                </div>    
             </div>
-        </header>
-            
-        <div class="panel-body">
-            {% block fos_user_content %}
-            {% endblock fos_user_content %}
         </div>
-    </div>
-</div>            
-{% endblock %}
+        {% block javascripts %}
+        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        {% endblock %}
+    </body>
+</html>
