--- a/src/CRM/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CRM/CoreBundle/Resources/views/layout.html.twig
@@ -23,7 +23,8 @@
                 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Accueil</a></li>    
+                        <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="#">Clients</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
