--- a/src/CRM/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CRM/CoreBundle/Resources/views/layout.html.twig
@@ -6,21 +6,15 @@
         <meta http-equiv="Content-language" content="fr-BE" />
         <title>{% block title %}- CRM{% endblock %}</title>
         {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme-crm.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('dist/css/bootstrap.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('dist/css/bootstrap-theme.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('dist/css/bootstrap-theme-crm.css') }}" type="text/css" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         <nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
             <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">
-                        <img alt="Brand" src="...">
-                    </a>                    
-                </div>
-                
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
@@ -28,22 +22,16 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ app.user.username }} <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
+                                <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
                             </ul>
                         </li>
-                        <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+                    
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -52,7 +40,9 @@
             </div>
         </div>
         {% block javascripts %}
-        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="{{ asset('dist/js/bootstrap.js') }}"></script>
+        <script src="{{ asset('dist/js/npm.js') }}"></script>        
         {% endblock %}
     </body>
 </html>
