--- a/src/CRM/UserBundle/Resources/views/layout.html.twig
+++ b/src/CRM/UserBundle/Resources/views/layout.html.twig
@@ -7,9 +7,9 @@
         <meta http-equiv="Content-language" content="fr-BE" />
         <title>{{ 'layout.login'|trans({}, 'FOSUserBundle') }} - CRM</title>
         {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme-crm-login.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('dist/css/bootstrap.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('dist/css/bootstrap-theme.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('dist/css/bootstrap-theme-crm-login.css') }}" type="text/css" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -41,7 +41,7 @@
             </div>
         </div>
         {% block javascripts %}
-        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('dist/js/bootstrap.min.js') }}"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         {% endblock %}
     </body>
