--- a/src/CRM/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/CRM/UserBundle/Resources/views/Security/login.html.twig
@@ -2,6 +2,11 @@
 
 {% trans_default_domain 'FOSUserBundle' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+<link rel="stylesheet" href="{{ asset('dist/css/bootstrap-theme-crm-login.css') }}" type="text/css" />
+{% endblock %}    
+
 {% block fos_user_content %}
 {% if error %}
     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
