bundle client : ajout, evenement update et persist

--- a/src/CRM/AccountBundle/Resources/views/Account/index.html.twig
+++ b/src/CRM/AccountBundle/Resources/views/Account/index.html.twig
@@ -13,9 +13,8 @@
                     <th>#</th>
                     <th>Nom</th>
                     <th>Ville</th>
-                    <th>Téléphone</th>
+                    <th>Site web</th>
                     <th>FAX</th>
-                    <th>#</th>
                 </tr>
             </thead>
             <tbody>
@@ -24,7 +23,7 @@
                     <td>{{ account.id }}</td>
                     <td>{{ account.name }}</td>
                     <td>{{ account.adresse }}</td>
-                    <td>{{ account.phone }}</td>
+                    <td>{{ account.siteWeb }}</td>
                     <td>{{ account.fAX }}</td>
                 </tr>
                 {% endfor %}
