--- a/src/CRM/AccountBundle/Resources/views/Account/index.html.twig
+++ b/src/CRM/AccountBundle/Resources/views/Account/index.html.twig
@@ -22,6 +22,7 @@
        data-pagination="true"
        data-sort-name="name"
        data-sort-order="asc"
+       data-idField="name"
        data-toolbar="#toolbar">
     <thead>
     <tr>
