--- a/src/CRM/CustomerBundle/Resources/views/Account/index.html.twig
+++ b/src/CRM/CustomerBundle/Resources/views/Account/index.html.twig
@@ -2,42 +2,69 @@
 
 {% block title %}Accueil - {{ parent() }}{% endblock %}
 
-{% block accountbody %}                 
+{% block accountbody %}
+    <div class="row">
+    {{ render(controller("CRMCustomerBundle:Account:newAccounts")) }}
+    </div>
+    
+<div class="row">
+    <div class="col-xs-12 col-md-12">
 <div id="toolbar" class="btn-group">
-    <a href="{{ path('crm_account_add') }}" class="btn btn-default">
-        <i class="glyphicon glyphicon-plus"></i>
+    <a href="{{ path('crm_account_add') }}" class="btn btn-primary">
+        <i class="fa fa-fw fa-plus"></i> Ajouter
     </a>
-    <a href="" class="btn btn-default">
-        <i class="glyphicon glyphicon-trash"></i>
+    <a href="" class="btn btn-danger">
+        <i class="fa fa-fw fa-trash"></i> Supprimer
     </a>
 </div>  
    
 <table data-toggle="table"
-       data-url="{{ path('api_get_accounts') }}"       
-       data-click-to-select="true"
+       data-url="{{ path('api_get_accounts') }}" 
        data-search="true"
        data-show-refresh="true"
        data-show-toggle="true"
        data-show-columns="true"
        data-pagination="true"
        data-sort-name="name"
-       data-sort-order="asc"
-       data-toolbar="#toolbar">
+       data-sort-order="asc"       
+       data-toolbar="#toolbar"
+       data-classes="table table-hover table-condensed table-primary"
+       data-striped="true"
+       data-icons-prefix="fa">
     <thead>
         <tr>
-            <th data-field="state" data-checkbox="true"></th>
-            <th data-field="name"  data-sortable="true">Nom</th>
-            <th data-field="adresse" data-sortable="true" data-visible="false">Adresse</th>
-            <th data-field="contact" data-sortable="true" data-visible="false">Contact</th>
-            <th data-field="siteWeb" data-sortable="true">Site Web</th>
-            <th data-field="tVA" data-sortable="true" data-visible="false">T.V.A</th>
-            <th data-field="phone" data-sortable="true">Téléphone</th>
-            <th data-field="fAX" data-sortable="true">FAX</th>
-            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents">Action</th>
+            <th data-field="name"  data-sortable="true" data-valign="middle"  data-switchable="false">Nom</th>
+            <th data-field="adresse" data-sortable="true" data-visible="false" data-valign="middle">Adresse</th>
+            <th data-field="contact" data-sortable="true" data-visible="false" data-valign="middle">Contact</th>
+            <th data-field="siteWeb" data-sortable="true" data-valign="middle">Site Web</th>
+            <th data-field="tVA" data-sortable="true" data-visible="false" data-valign="middle">T.V.A</th>
+            <th data-field="phone" data-sortable="true" data-valign="middle">Téléphone</th>
+            <th data-field="fAX" data-sortable="true" data-valign="middle">FAX</th>
+            <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents" data-valign="middle" data-width="150"  data-switchable="false">Action</th>
         </tr>
     </thead>
 </table>
-
+       </div>
+    </div>
+       {#
+<div class="modal fade" id="viewAccount" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+#}
 {% endblock %}
 
 {% block javascripts %}
@@ -46,15 +73,15 @@
 <script>
     function actionFormatter(value, row, index) {
     return [
-        '<a class="like" href="javascript:void(0)" title="View">',
+        '<div class="btn-group" data-toggle="modal" data-target="#viewAccount"><a class="btn btn-info like" href="javascript:void(0)" title="View">',
         '<i class="fa fa-fw fa-eye"></i>',
         '</a>',
-        '<a class="edit ml10" href="javascript:void(0)" title="Edit">',
+        '<a class="btn btn-default edit ml10" href="javascript:void(0)" title="Edit">',
         '<i class="fa fa-fw fa-edit"></i>',
         '</a>',
-        '<a class="remove ml10" href="javascript:void(0)" title="Remove">',
-        '<i class="fa fa-fw fa-remove"></i>',
-        '</a>'
+        '<a class="btn btn-danger remove ml10" href="javascript:void(0)" title="Remove">',
+        '<i class="fa fa-fw fa-trash"></i>',
+        '</a></div>'
     ].join('');
 }
 
